# cangauge

./: CMakeLists.txt  README.md  cangauge.c
libs/mcp/: mcp.cmake
libs/mcp/include/mcp/: mcp.h
libs/mcp/src/: mcp.c
